test/files/invalid/struct_field_default.stderr
error: 
  ┌─ test/files/invalid/struct_field_default.fbs:2:14
  │
2 │   x: uint8 = 1;
  │              ^ Struct fields cannot have default values

